styles/main.css
:root {
    --cardColor: #f1f1f1;
    --cardShadow: #ebebeb;
    --headingBackgroundColor: #292929;
    --headingAccordionColor: #2d3b67;
    --activeAccordionBtn: #93a8ea;

    --textColorOnBackground: #f1f1f1;
    --textColor: rgb(40, 40, 40);
}

body {
    color: var(--textColor);
    margin: 0 60px;
}

p {
    margin: 0;
    padding: 0;
}

h1 {
    text-align: center;
}

h2 {
    margin: 5px 0 5px 0;
    font-size: 1.2em;
    letter-spacing: 0.05em;
}

h4 {
    margin: 5px 0 5px 0;
}

.section__h2 {
    color: var(--textColorOnBackground);
    background-color: var(--headingBackgroundColor);
    padding: 10px 0 10px 5px;
    margin: 20px 0 0;
}

.section__h3 {
    background-color: var(--headingAccordionColor);
    color: var(--textColorOnBackground);
    padding: 5px 0 5px 5px;
    margin: 5px 20px;
}

textarea {
    height: auto;
    overflow: vertical;
    resize: none;
}

/****************** UI ******************/

.ui-accordion__btn {
    cursor: pointer;
    transition: 0.6s;
}

.ui-accordion__active, .ui-accordion__btn:hover {
    background-color: var(--activeAccordionBtn);
    color: var(--textColor)
}

.ui-accordion__btn:after {
    float: left;
    content: "\002B";
}

.ui-accordion__active:after {
    content: "\2212";
}

.ui-accordion__section {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.4s ease-in-out;
    margin: 0 20px;
}

/**************** END UI ****************/



.card {
    margin: 0.6rem;
    padding: 0.8rem;
    flex: 1 1 auto;
    background-color: var(--cardColor);
    height: min-content;
    border-radius: 20px;
    box-shadow: 0px 2px 10px var(--cardShadow);
    transition: all .2s ease-in-out;
}

.card:hover {
    transform: scale(1.02);
    box-shadow: 0px 6px 5px var(--cardShadow);
}

.filter__heading {
    color: var(--textColorOnBackground);
    background-color: var(--headingBackgroundColor);
    padding: 5px 0 5px 5px;
    margin-top: 0;
}

.filters {
    display: flex;
    flex-flow: column;
    background-color: var(--cardColor);
}

.filter {
    margin: 5px 5px 5px 5px;
}


.h3__criminal-notes {
    grid-row: 4;
    grid-column: 1 / span 2;
}

.note__container--form {
    display: flex;
    flex-flow: column wrap;
    width: max-content;
    padding: 0 30px 25px;
    background-color: #bcc5d8;
    border-radius: 10px;
    box-shadow: 0px 5px 5px rgb(221, 221, 221);
}

.note__form {
    display: flex;
    flex-flow: column wrap;
}

.note-label {
    margin-top: 5px;
}

.note__container--cards {
    display: flex;
    flex-flow: row wrap;
    grid-column: 1 / span 2;
    grid-row: 6;
    height: min-content;
}

.criminals__h2 {
    grid-column: 1 / span 2;
}

.h3__selected-criminals {
    grid-row-start: 2;
    grid-column: 1 / span 2;
}

.card__criminal-container {
    display: flex;
    flex-flow: row wrap;
    grid-column: 1 / span 2;
    grid-row: 3 / span 1;
    margin-top: 10px;
}

.card__officer-container {
    display: flex;
    flex-flow: row wrap;
}

